Test/test_runner.txt
Running test_runner

/mnt/c/Users/Dani/Documents/Projects/uPrint/Test/dummy_test.cpp:14: error: Failure in TEST(FirstTestGroup, SecondTest)
	expected <hello>
	but was  <world>
	difference starts at position 0 at: <          world     >
	                                               ^

.
/mnt/c/Users/Dani/Documents/Projects/uPrint/Test/dummy_test.cpp:9: error: Failure in TEST(FirstTestGroup, FirstTest)
	Fail me!

.
Errors (2 failures, 2 tests, 2 ran, 2 checks, 0 ignored, 0 filtered out, 0 ms)

